kubernetes/rr-fam/sonarr/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: rr-fam
  labels:
    name: sonarr-svc
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - port: 8989
      targetPort: 8989
